# prompt-gruardrail-ml-system

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: .env.example  Dockerfile  Dockerfile.dev  README.md  app.py  monitor.py  requirements.txt
api/router/: core_service.py
helm/: Makefile  README.md
helm/ELK/: ELK_setting.md
helm/argo-cd/: values.yaml
helm/cert-manager/: certificate.yaml
helm/ingress-nginx/: values.yaml
helm/jaeger/: JAEGER_setting.md  values.yaml
helm/kube-prometheus-stack/: KUBE_PROM_STACK_setting.md  values.yaml
helm/mychart/: values.yaml
helm/otel_collector/: my_values.yaml
helm/prometheus/: additional-scrape-configs.yaml  prometheus-additional.yaml
helm/prompt-guardrail/: Chart.yaml  values.yaml
helm_charts/argo-cd/: Chart.yaml  values.yaml
helm_charts/cert-manager/: acme-issuer.yaml
helm_charts/jaeger/: values.yaml
helm_charts/otel-collector/: OTEL_setting.md  values.yaml
helm_charts/prompt-guardrail/: configmap.yaml  values.yaml
iac/terraform/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
jenkins/: Dockerfile  Jenkinsfile  docker-compose.yml  docker_build.sh  docker_setup.sh
k8s/: deployment.yaml  service.yaml
monitoring/otel_collector/: config.yaml
monitoring/prometheus/: config.yml
notebook/: training.ipynb
scripts/: argocd.sh  cert-manager.sh  jaeger.sh  model-serving.sh  monitoring.sh  nginx-system-ip.sh  nginx-system.sh  otel-collector.sh  prometheus-stack.sh  utils.sh
tests/: requirements.txt  test_system.py
(+26 files in other folders)
