[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel",
    "transformers[sentencepiece]",
    "datasets",
    "torch",
    "evaluate",
    "scikit-learn",
    "accelerate>=0.26.0",
    "ipywidgets"
]