[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ipykernel==6.29.5",
    "transformers==4.52.4",
    "datasets==3.6.0",
    "torch==2.7.0+cu118",
    "evaluate==0.4.3",
    "scikit-learn==1.6.1",
    "accelerate>=0.26.0",
    "ipywidgets==8.1.7",
    "pytest==8.4.0",
    "httpx==0.28.1",
    "pytest-cov==6.1.1",
]